<resources>
    <string name="app_name">MorseCode</string>
    <string name="actionbar_title_activity_settings">Settings</string>
    <string name="actionbar_title_activity_info">CodeBook</string>

    <string name="no_result_data">There is no output.</string>
    <string name="edit_text_morse_hint">Input Morse Data</string>
    <string name="edit_text_char_hint">Input Char Data</string>

    <!-- Preference Titles -->
    <string name="set_header">Settings</string>
    <string name="dev_header">Developer Info</string>

    <!-- Settings Preferences -->
    <string name="set_language_title">Default Language</string>
    <string name="set_language_summary">Set your default language.</string>
    <string name="set_speed_title">Play length</string>
    <string name="set_speed_summary">Set the playback length.</string>
    <string name="set_save_title">Save Settings</string>
    <string name="set_save_summary">Save settings such as vibrations, lights, and sounds.</string>

    <!-- Developer Info Preferences -->
    <string name="dev_e_title">Developer E-mail</string>
    <string name="dev_e_summary">steganowork@naver.com</string>
    <string name="dev_v_title">Version Information</string>
    <string name="dev_v_summary">Version</string>

    <!-- AD Banner -->
    <string name="admob_app_id">ca-app-pub-9382651871536803~4484177286</string>
    <string name="banner_ad_unit_id">ca-app-pub-9382651871536803/9252454086</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <!-- ALC(Application License Checker) -->
    <string name="license_key">MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQCPtgieYEnqpjqH16/+TCXaMb2wXBFXb3JpJbrUZN7GOscg33x9uo7QUW5D9nAc3xJDm+b+1TLo4I4EtoGSuZg2A1stHQ0rK68qocKBB6VaP3kWqVp3YD8aHQXe+/fnwdlmBAVbeSAWvgjp2PZcH1B18x8R94CsLTS/YrlgsuOdtwIDAQAB</string>
    <string name="app_market_detail_url">https://onestore.co.kr/userpoc/apps/view?pid=</string>
    <string name="goto_app_market_url">https://onestore.co.kr/userpoc/apps/</string>
    <string name="download_onestore_service_url">https://m.onestore.co.kr/mobilepoc/etc/downloadGuide.omp</string>
    <string name="does_not_exist">Purchase history does not exist.\nWould you like to buy from One Store?</string>
    <string name="move_network_setting_screen">Do you want to move to the network settings screen?</string>
    <string name="required_onestore_login">ONE store login is required.\nDo you want to try again?</string>
    <string name="required_onestore_service_install">ONE store service installation is required.\nDo you want to download it?</string>
    <string name="unknown_error">Unknown error.\nPlease contact ONE store.\nDo you want to try again?</string>

</resources>
