<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/dev_header"
        app:iconSpaceReserved="false">
        <Preference
            app:title="@string/dev_e_title"
            app:summary="@string/dev_e_summary"
            app:selectable="false"
            app:iconSpaceReserved="false">
        </Preference>
        <Preference
            app:key="app_version"
            app:title="@string/dev_v_title"
            app:summary="@string/dev_v_summary"
            app:selectable="false"
            app:iconSpaceReserved="false">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
